--- a/style.css
+++ b/style.css
@@ -109,12 +109,13 @@ i {
     align-items: center;
     justify-content: center;
     font-size: 0.75rem;
+    border-radius: 50px;
 }
 
 .tamil, .english, .malayalam {
     background: rgb(34, 121, 148);
     height: 1.5rem;
-    color: #fff;
+    border-radius: 50px;
 }
 
 .html, .css {
@@ -159,6 +160,7 @@ i {
 footer {
     background: rgb(34, 121, 148);
     height: 20vh;
+    min-height: 150px;
     min-width: 30%;
     max-width: 100%;
     display: flex;
@@ -183,11 +185,20 @@ footer {
 button {
     padding: 0.5rem;
     border: none;
-    border-radius: 2px;
+    border-radius: 4px;
     color: rgb(34, 121, 148);
     background: rgb(243, 243, 243);
     font-weight: bold;
+    outline: none;
+    cursor: pointer;
 }
+
+button:active {
+    transform: translateX(4px) translateY(4px);
+}
+
+.social-media div:active {
+    transform: translateX(4px) translateY(4px);}
 
 a {
     text-decoration: none;
@@ -200,6 +211,39 @@ a {
 
 h1,h2,h3,h4,h5,h6,p,div {
     cursor: alias;
+}
+
+.pop-up-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0,0,0,0.4);
+    display: none;
+    cursor: pointer;
+}
+
+.pop-up {
+    width: 80%;
+    height: 50px;
+    background: rgb(34, 121, 148);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%,-50%,0);
+    border-radius: 4px;
+    color: #fff;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.pop-up h4 {
+    position: absolute;
+    top: 50%;
+    left: 23%;
+    transform: translateY(-50%);
 }
 
 @media screen and (min-width: 600px) {
