--- a/style.css
+++ b/style.css
@@ -233,17 +233,15 @@ h1,h2,h3,h4,h5,h6,p,div {
     left: 50%;
     transform: translate3d(-50%,-50%,0);
     border-radius: 4px;
-    color: #fff;
-    text-align: center;
-    font-size: 1.2rem;
-    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap:nowrap;
 }
 
 .pop-up h4 {
-    position: absolute;
-    top: 50%;
-    left: 23%;
-    transform: translateY(-50%);
+    color: #fff;
+    font-weight: bold;
 }
 
 @media screen and (min-width: 600px) {
@@ -269,11 +267,25 @@ h1,h2,h3,h4,h5,h6,p,div {
     #education {
         grid-area: education;
     }
+
+    .pop-up h4 {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .pop-up h4 {
+        font-size: 0.75rem;
+    }
 }
 
 @media screen and (min-width: 900px) {
     #wrapper {
         grid-template-columns: 30% 70%;
+    }
+
+    .pop-up h4 {
+        font-size: 1.5rem;
     }
 }
 
