--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ section {
     box-shadow: 2px 2px 16px 0px rgba(102, 102, 102, 0.589);
 }
 
+section:not(#profile) {
+    page-break-inside: avoid;
+}
+
 section:nth-last-of-type(1) {
     margin-bottom: 1rem;
 }
@@ -197,8 +201,6 @@ button:active {
     transform: translateX(4px) translateY(4px);
 }
 
-.social-media div:active {
-    transform: translateX(4px) translateY(4px);}
 
 a {
     text-decoration: none;
